Mockito extension